kubernetes/catalog/qbittorrent/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: qbittorrent
          port: 8082
  tls: {}
